--- a/src/resources/styles/Hero.scss
+++ b/src/resources/styles/Hero.scss
@@ -23,7 +23,7 @@
 
     .hero-image {
         background-size: cover;
-        background-color: black;
+        background-color: #252525;
         z-index: 0;
     }
 
