--- a/src/blog/index.scss
+++ b/src/blog/index.scss
@@ -1,50 +1,59 @@
 .page.page-blog {
-    .hero {
-        height: auto;
-        background: none;
-        padding: 0;
-        margin-top: 30px;
+  .card {
+    border: none;
+    height: 160px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    padding: 12px;
+
+    &:last-child {
+      border-bottom: none;
+      margin-bottom: 0;
     }
 
-    // .main-container section:first-child {
-    //     padding-top: 0;
-    // }
+    @media (max-width: 1040px) {
+      height: unset !important;
+    }
+  }
 
-    .card {
-        border: none;
-        height: 160px;
-        border-radius: 0;
-        margin-bottom: 20px;
+  .card-img-left {
+    max-width: 250px;
+    border-radius: 20px;
+    overflow: hidden;
+    min-width: 250px;
 
-        &:last-child {
-            border-bottom: none;
-            margin-bottom: 0;
-        }
+    + .card-body a.card-title {
+      white-space: nowrap;
+      overflow: hidden;
+      max-width: 83%;
+      text-overflow: ellipsis;
     }
 
-    .card-img-left {
-        max-width: 250px;
-
-        img {
-            width: 100%;
-            object-fit: cover;
-            height: 100%;
-        }
-
-        &:not(.card-has-img) {
-            position: relative;
-            &:after {
-                position: absolute;
-                font-family: 'FontAwesome';
-                font-weight: 400;
-                content: '\f1ea';
-                left: 50%;
-                top: 50%;
-                transform: translateX(-50%) translateY(-50%);
-                font-size: 80px;
-                color: white;
-                transition: opacity 0.3s ease-in-out;
-            }
-        }
+    img {
+      width: 100%;
+      object-fit: cover;
+      height: 100%;
     }
+
+    &:not(.card-has-img) {
+      position: relative;
+      &:after {
+        position: absolute;
+        font-family: 'FontAwesome';
+        font-weight: 400;
+        content: '\f1ea';
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        font-size: 80px;
+        color: white;
+        transition: opacity 0.3s ease-in-out;
+      }
+    }
+
+    @media (max-width: 1040px) {
+      width: 100px !important;
+      display: none !important;
+    }
+  }
 }
