--- a/src/resources/styles/Header.scss
+++ b/src/resources/styles/Header.scss
@@ -1,204 +1,128 @@
 .page header.page-header {
-    display: unset;
-    user-select: none;
+  user-select: none;
 
-    .header-nav {
-        height: 80px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: white;
-        width: 100%;
-        top: 20px;
-        transition: 0.3s background ease-in-out;
+  .header-nav {
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #eaeaea;
+    width: 100%;
+    top: 20px;
+    transition: 0.3s background ease-in-out;
 
-        .nav-item {
-            a.nav-link {
-                border-radius: 20px;
-                padding: 10px 15px;
-                color: rgba(255, 255, 255, 0.5);
-            }
-
-            &.active {
-                a {
-                    padding: 10px 20px;
-                    margin: 0 20px;
-                    position: relative;
-                    color: black;
-                    /*position: relative;
-                    box-shadow: 0px 0px 6px #00000029;
-                    background: linear-gradient(
-                        -45deg,
-                        #ffa63d,
-                        #ff3d77,
-                        #338aff,
-                        #3cf0c5
-                    );
-                    color: black;
-                    background-size: 600%;
-                    animation: btnanim 20s linear infinite;
-                    transition: opacity 0.3s ease-in-out;*/
-
-                    span {
-                        color: #737373;
-                        position: relative;
-                        z-index: 1;
-                    }
-
-                    &:after {
-                        content: '';
-                        user-select: none;
-                        //width: 95%;
-                        //height: 89%;
-                        width: 100%;
-                        height: 100%;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        //top: 50%;
-                        //left: 50%;
-                        //transform: translateY(-50%) translateX(-50%);
-                        background: white;
-                        border-radius: 20px;
-                    }
-
-                    &:before {
-                        content: '';
-                        background: linear-gradient(
-                            -45deg,
-                            #ffa63d,
-                            #ff3d77,
-                            #338aff,
-                            #3cf0c5
-                        );
-                        color: white;
-                        background-size: 600%;
-                        width: 100%;
-                        height: 100%;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        z-index: -1;
-                        //transform: scale(1.1);
-                        border-radius: 20px;
-                        opacity: 0.3;
-                        filter: blur(8px);
-                        animation: btnanim 15s linear infinite;
-                    }
-
-                    &:hover {
-                        opacity: 0.8;
-                    }
-                }
-            }
-
-            @keyframes btnanim {
-                0% {
-                    background-position: 0% 50%;
-                }
-                50% {
-                    background-position: 100% 50%;
-                }
-                100% {
-                    background-position: 0% 50%;
-                }
-            }
-
-            &:last-child {
-                a {
-                    margin-right: 0 !important;
-                }
-            }
-        }
-
-        .logo {
-            color: white;
-            font-size: 25px;
-            font-weight: 300;
-            max-width: 220px;
-
-            img {
-                max-width: 100%;
-                height: auto;
-            }
-        }
-
-        &:not(.scrolled) {
-            z-index: 10;
-            position: relative;
-        }
-
-        &.sticky-unset {
-            background: #252525e7;
-            backdrop-filter: blur(10px);
-            animation: sticky-top-unset 0.5s forwards;
-        }
-
-        &.scrolled {
-            background: #252525e7;
-            backdrop-filter: blur(10px);
-            animation: sticky-top-set 0.5s forwards;
-        }
-
-        .navbar-light .navbar-toggler {
-            border: none;
-            outline: none;
-        }
-
-        .navbar-toggler-icon {
-            width: 40px;
-            height: 40px;
-            background-size: 50%;
-            background-color: white;
-            border-radius: 22px;
-        }
-
-        .dropdown-menu {
-            left: unset;
-            right: 0;
-        }
-
-        .dropdown:hover .dropdown-menu {
-            display: block;
-            margin: 0;
-        }
-
-        // Medium devices (tablets, less than 992px)
-        @media (max-width: 991.98px) {
-            .navbar-collapse {
-                background: #2f2f2f;
-                position: absolute;
-                top: 100%;
-                width: 100%;
-                right: 0;
-                padding: 18px 20px;
-                z-index: 999999999999999;
-                border-radius: 10px;
-            }
-
-            .dropdown-menu {
-                margin-bottom: 10px;
-            }
-        }
-
-        @keyframes sticky-top-set {
-            0% {
-                top: -100px;
-            }
-            100% {
-                top: 0;
-            }
-        }
-
-        @keyframes sticky-top-unset {
-            0% {
-                background: #252525e7;
-                backdrop-filter: blur(10px);
-            }
-            100% {
-                background: transparent;
-                backdrop-filter: blur(0px);
-            }
-        }
+    .navbar {
+      padding: 0;
     }
+
+    .navbar-nav {
+      border-radius: 20px;
+      padding: 0 12px;
+    }
+
+    .navbar-nav,
+    .navbar-toggler {
+      background: #252525;
+    }
+
+    .navbar-toggler {
+      border: none;
+      border-radius: 50%;
+      height: 50px;
+      width: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @media (min-width: 992px) {
+      .navbar-expand-lg .navbar-toggler {
+        display: none;
+      }
+    }
+
+    .logo {
+      color: #eaeaea;
+      font-size: 25px;
+      font-weight: 500;
+    }
+
+    &.scrolled {
+      .logo {
+        color: white;
+      }
+    }
+
+    &:not(.scrolled) {
+      z-index: 10;
+    }
+
+    &.sticky-unset {
+      background: #252525c4;
+      backdrop-filter: blur(10px);
+      animation: sticky-top-unset 0.5s forwards;
+    }
+
+    &.scrolled {
+      background: #252525c4;
+      backdrop-filter: blur(10px);
+      animation: sticky-top-set 0.5s forwards;
+      position: fixed;
+      left: 0;
+      padding: 20px;
+      color: white;
+    }
+
+    .navbar-dark .navbar-toggler {
+      border: none;
+    }
+
+    .dropdown-menu {
+      left: unset;
+      right: 0;
+    }
+
+    .dropdown:hover .dropdown-menu {
+      display: block;
+      margin: 0;
+    }
+
+    // Medium devices (tablets, less than 992px)
+    @media (max-width: 991.98px) {
+      .navbar-collapse {
+        background: #252525;
+        position: absolute;
+        top: 110%;
+        width: 100%;
+        right: 0;
+        padding: 0 20px;
+        z-index: 999999999999999;
+        border-radius: 20px;
+      }
+
+      .dropdown-menu {
+        margin-bottom: 10px;
+      }
+    }
+
+    @keyframes sticky-top-set {
+      0% {
+        top: -100px;
+      }
+      100% {
+        top: 0;
+      }
+    }
+
+    @keyframes sticky-top-unset {
+      0% {
+        background: #252525c4;
+        backdrop-filter: blur(10px);
+      }
+      100% {
+        background: transparent;
+        backdrop-filter: blur(0px);
+      }
+    }
+  }
 }
