--- a/src/post/index.css
+++ b/src/post/index.css
@@ -8,12 +8,13 @@
 .page.page-post h4,
 .page.page-post h5,
 .page.page-post h6 {
-  font-family: 'Roboto', sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
 .page.page-post h1 {
-  font-size: 44px;
   font-weight: 700;
+  font-family: "Work Sans", serif;
+  font-size: 2.5rem;
 }
 
 .page.page-post h2 {
@@ -21,21 +22,25 @@
   display: flex;
   justify-content: space-between;
   margin-top: 40px;
+  margin-bottom: 15px;
 }
 
 .page.page-post h3 {
-  margin-top: 40px;
-  margin-bottom: 15px;
   font-weight: 700;
+  margin-bottom: 15px;
+  margin-top: 40px;
+  font-family: "Work Sans", serif;
 }
 
 .page.page-post h4 {
   margin-top: 25px;
+  font-family: "Work Sans", serif;
 }
 
 .page.page-post h5 {
   margin-top: 35px;
   margin-bottom: 15px;
+  font-family: "Work Sans", serif;
 }
 
 .page.page-post strong {
