--- a/src/resources/styles/Header.css
+++ b/src/resources/styles/Header.css
@@ -45,9 +45,9 @@
 }
 
 .page header.page-header .header-nav .logo {
-  color: #eaeaea;
+  color: #000;
   font-size: 25px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .page header.page-header .header-nav.scrolled .logo {
