--- a/src/post/index.css
+++ b/src/post/index.css
@@ -23,6 +23,7 @@
   justify-content: space-between;
   margin-top: 40px;
   margin-bottom: 15px;
+  font-family: "Work Sans", serif;
 }
 
 .page.page-post h3 {
@@ -32,8 +33,11 @@
   font-family: "Work Sans", serif;
 }
 
-.page.page-post h4 {
+.page.page-post h4:not(.explore-more) {
   margin-top: 25px;
+}
+
+.page.page-post h4 {
   font-family: "Work Sans", serif;
 }
 
@@ -152,18 +156,12 @@
   border: none;
 }
 
-.page.page-post h4.section-title.explore-more {
-  border-bottom: 2px solid #007bff;
-}
-
 .page.page-post h4.section-title.explore-more span {
-  color: white;
-  background: #007bff;
-  padding: 5px 11px;
-  margin-left: 15px;
+  padding: 0;
   width: 174px;
   height: 50px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
