--- a/src/post/index.css
+++ b/src/post/index.css
@@ -165,3 +165,7 @@
   align-items: center;
   font-family: 'Roboto', sans-serif;
 }
+
+.page.page-post main .content .post-inner-content > *:first-child {
+  margin-top: 0;
+}
