--- a/src/docs/index.css
+++ b/src/docs/index.css
@@ -63,6 +63,7 @@
   height: 80px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
 }
 
 .page.page-docs .post-date {
