--- a/src/resources/styles/Page.css
+++ b/src/resources/styles/Page.css
@@ -108,11 +108,13 @@
   padding: 0;
 }
 
-.page main .main-container section {
+.page main .main-container section,
+.page main .main-container .content-section {
   padding: 20px 0;
 }
 
-.page main .main-container section:last-child {
+.page main .main-container section:last-child,
+.page main .main-container .content-section:last-child {
   border-bottom: none;
 }
 
@@ -379,12 +381,14 @@
   border-radius: 20px;
 }
 
-.page.page-docs main .main-container section {
+.page.page-docs main .main-container section,
+.page.page-docs main .main-container .content-section {
   padding: 0;
   border-bottom: none;
 }
 
-.page.page-docs main .main-container section h2 {
+.page.page-docs main .main-container section h2,
+.page.page-docs main .main-container .content-section h2 {
   font-size: 28px;
   padding: 15px 0;
   margin-bottom: 30px;
@@ -657,7 +661,8 @@
   min-height: 300px;
 }
 
-.page.page-post main .main-container section {
+.page.page-post main .main-container section,
+.page.page-post main .main-container .content-section {
   margin-top: 0;
 }
 
