--- a/src/resources/styles/Hero.css
+++ b/src/resources/styles/Hero.css
@@ -8,7 +8,7 @@
 
 .hero .hero-image {
   background-size: cover;
-  background-color: #252525;
+  background-color: var(--primary-foreground);
   z-index: 0;
 }
 
