--- a/src/resources/styles/Menu.css
+++ b/src/resources/styles/Menu.css
@@ -1,5 +1,5 @@
 .page .page-menu.mode-prev-next {
-  border-top: 1px dashed #252525;
+  border-top: 1px dashed var(--primary-foreground);
   list-style: none;
   padding: 0;
   margin: 0;
